cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker_event_controllability.cif.iec.err
WARNING: The Input specification has no annotation for the bounded response property.
WARNING: The Input specification has no annotation for the confluence property.
WARNING: Before generating PLC code, both the bounded response and the confluence properties of the CIF specificiation should be checked and hold.
WARNING: Please apply the CIF controller properties checker application on hte CIF specification before generating PLC code from it.
WARNING:
WARNING: Using control code generated from a CIF specification without both bounded response and confluence properties may result in undesired or unexpected behavior of the controlled system.
WARNING: Bounded response limit for uncontrollable events is not available, falling back to limitless trying events until blocked.
WARNING: Bounded response limit for controllable events is not available, falling back to limitless trying events until blocked.
WARNING: I/O table file "plcgen/prechecker_event_controllability.csv" not found. The PLC code will not perform any I/O with the environment.
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  ------------------------------------------------------------------------------------
  (1/3) Edge has an explicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In location "A.Y":
     - edge tau goto X;
            ^

  ------------------------------------------------------------------------------------
  (2/3) Edge has an implicit 'tau' event, which is not controllable or uncontrollable.
  ------------------------------------------------------------------------------------
   * In location "A.X":
     - edge when d = 7 goto Y;
       ^

  --------------------------------------------------------------
  (3/3) Event is not declared as controllable or uncontrollable.
  --------------------------------------------------------------
   * In the top-level scope of the specification:
     - event e;
             ^
